<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">translatewiki</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">login!</string>
    <string name="link"><a href="https://translatewiki.net/w/i.php?title=Special:UserLogin%26type=signup">signup</a></string>
    <string name="title_activity_translate">Translate</string>
    <string name="logout">logout</string>
    <string name="title_activity_main">translatewiki</string>
    <string name="preference_tracking">Text for preference that enables the user to enable or disable collection of data about the user\'s usage patterns.</string>
    <string name="preference_tracking_summary">Help text for preference that enables the user to enable or disable collection of data about the user\'s usage patterns.</string>
    <string name="preference_file_key">net.translatewiki.app.preference</string>
    <string name="saved_username">net.translatewiki.app.saved_username</string>
    <string name="saved_password">net.translatewiki.app.saved_password</string>
    <string name="account_type_identifier">net.translatewiki.auth</string>
    <string name="user_agent">TranslateWiki app for Android</string>
    <string name="title_activity_login">Sign in to TranslateWiki</string>
    <string name="login_subtitle">Login to Translate!</string>
    <string name="translated_text">Translated Text</string>
    <string name="source_text">Source Text</string>
    <string name="button_accept_translation">Correct</string>
    <string name="button_reject_translation">Reject</string>
    <string name="language_preference">Language</string>
    <string name="settings_menu">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="logging_in_title">Logging In</string>
    <string name="logging_in_message">One moment...</string>
    <string name="login_success">Login success!</string>
    <string name="login_failed">Login failed!</string>
    <string name="authentication_failed">Authentication failed!</string>
    <string name="action_search">Search</string>
    <string name="pref_header_languages">Languages</string>
    <string name="pref_title_select_language">Language</string>
    <string name="pref_title_select_project">Project</string>
    <string name="action_translate">Translate</string>
    <string name="action_proofread">Proofread</string>
    <string name="projects_key">projects_key</string>
    <string name="langugage_key">language_key</string>
    <string name="state_key">state_key</string>
    <string name="fetch_size_key">fetch_size_key</string>
    <string name="max_message_length_key">max_length_for_message_key</string>
    <string name="project_entry_list_key">project_entry_list_key</string>
    <string name="project_value_list_key">project_value_list_key</string>
    <string name="logout_success">Logout success!</string>
    <string name="lang_pref_default">en</string>
    <string name="proj_pref_default">!recent</string>
    <string name="fetch_size_pref_default">6</string>
    <string name="max_length_pref_default">100</string>
    <string name="your_translation">Your translation</string>
    <string name="load_messages_failed">Load Fail</string>
    <string name="no_more_msg">No more messages to load</string>
    <string name="loading_msgs">Loading...</string>

</resources>
