<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <net.translatewiki.app.LanguageSearchableListPreference
        android:dialogLayout="@layout/searchable_list_preference"
        android:dialogTitle="Language"
        android:key="@string/langugage_key"
        android:title="Language"
        android:summary="Translation language"
        android:defaultValue="@string/lang_pref_default" />

    <net.translatewiki.app.ProjectSearchableListPreference
        android:dialogLayout="@layout/searchable_list_preference"
        android:dialogTitle="Project"
        android:key="@string/projects_key"
        android:title="Project"
        android:summary="Project to contribute"
        android:defaultValue="@string/proj_pref_default" />

    <net.translatewiki.app.FetchNumberPickerPreference
        android:dialogLayout="@layout/number_picker"
        android:dialogTitle="Fetch Size"
        android:key="@string/fetch_size_key"
        android:title="Fetch size"
        android:summary="The number of messages to fetch each time"
        android:defaultValue="@string/fetch_size_pref_default" />

    <net.translatewiki.app.MaxLenNumberPickerPreference
        android:dialogLayout="@layout/number_picker"
        android:dialogTitle="Maximum Message Length"
        android:key="@string/max_message_length_key"
        android:title="Maximum message length"
        android:summary="The maximal length of message to be shown"
        android:defaultValue="@string/max_length_pref_default" />

</PreferenceScreen>
