<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="horizontal"
    android:padding="0dp">

    <ImageView
        android:id="@+id/commonsLogo"
        android:layout_width="106dp"
        android:layout_height="155dp"
        android:src="@drawable/login_logo_large"
        android:padding="0dp"
        android:layout_gravity="center|top"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="20dp"
        android:gravity="bottom">

        <TextView
            android:id="@+id/loginSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/login_subtitle"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_gravity="center"
            android:textColorHighlight="#878f97"
            android:gravity="top"
            android:layout_marginBottom="3dp"/>

        <EditText
            android:id="@+id/loginUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textNoSuggestions"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp">

            <requestFocus />
        </EditText>

        <EditText
                android:id="@+id/loginPassword"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:hint="@string/password"
               android:inputType="textPassword"
               android:layout_marginTop="3dp"
               android:layout_marginBottom="3dp"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:text="@string/login"
            android:background="#437db8"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"/>
    </LinearLayout>

</LinearLayout>
